<resources>
    <string name="app_name">TubesPPB</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="text_already_an_user_login">Already an user? Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="btn_text_login">Login</string>
    <string name="text_not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profil_username">Username</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="log_out">Log Out</string>
    <string name="profile_icon">Profile_Icon</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Simpan</string>
    <string name="halaman_profil">Halaman Profil</string>
    <string name="image_profil">Image_Profil</string>
    <string name="welcome_text">Selamat Datang Username</string>
    <string name="rekomendasi_jasa">Rekomendasi Jasa</string>
    <string name="lihat_riwayat">Lihat Riwayat</string>
    <string name="laundry_image">Laundry image</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="username">Username</string>
    <string name="kategori">Kategori</string>
    <string name="info">info</string>
    <string name="sebagian_penyedia_jasa_pengiriman_berpotensi_tidak_bisa_untuk_sementara_waktu">Sebagian penyedia jasa pengiriman berpotensi tidak bisa untuk sementara waktu.</string>
    <string name="laundry_terdekat">Laundry Terdekat</string>
    <string name="riwayat">riwayat</string>
    <string name="azhar_periksa_riwayat_pesananmu">Alvin, Periksa Riwayat Pesananmu</string>
    <string name="cancel">Cancel</string>
    <string name="gambar">gambar</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="riwayat_laundry">Riwayat Laundry</string>
    <string name="oops_belum_ada_data_laundry">Oops, belum ada data Laundry</string>
    <string name="pesanan_selesai">Pesanan Selesai</string>
    <string name="delete">delete</string>
    <string name="gambar1">gambar</string>
    <string name="nama_jalan">Nama Jalan</string>
    <string name="nama_lokasi">Nama Lokasi</string>
    <string name="_5">5</string>
    <string name="laundry_disini">Laundry Disini</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="image1">image1</string>
    <string name="kaos">Kaos</string>
    <string name="rp_12_000">Rp 12.000</string>
    <string name="image_minus">image minus</string>
    <string name="_0">0</string>
    <string name="image_add">image add</string>
    <string name="image2">image2</string>
    <string name="jeans">Jeans</string>
    <string name="jaket">Jaket</string>
    <string name="cuaca_hari_ini">Cuaca Hari ini</string>
    <string name="icon_cuaca">Icon cuaca</string>
</resources>