<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profil">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutInti2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">


        <LinearLayout
            android:id="@+id/layoutInti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewProfilePicture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/profile_icon"
                android:src="@drawable/baseline_person_25" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/halaman_profil"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                tools:ignore="VisualLintOverlap" />


            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/aqua_border"
                android:drawablePadding="8dp"
                android:text="@string/profil_username"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_person_outline_24" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/Pale_Turquoise" />

            <TextView
                android:id="@+id/textViewPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/aqua_border"
                android:drawablePadding="8dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_phone_24" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/Pale_Turquoise" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/aqua_border"
                android:drawablePadding="8dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_email_24" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/Pale_Turquoise" />

            <Button
                android:id="@+id/buttonEditProfile"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_btn"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonLogOut"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_btn"
                android:text="@string/log_out"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>