<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profil"
    tools:context=".view.EditProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutInti2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewProfilePicture"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/profile_icon"
                    android:src="@drawable/baseline_person_25" />

                <EditText
                    android:id="@+id/textViewUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:drawablePadding="8dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@string/profil_username"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/baseline_person_outline_24"
                    tools:ignore="LabelFor,VisualLintTextFieldSize" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/Pale_Turquoise" />

                <EditText
                    android:id="@+id/textViewPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:importantForAutofill="no"
                    android:inputType="phone|number"
                    android:text="@string/phone_number"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/baseline_phone_24"
                    tools:ignore="LabelFor,VisualLintTextFieldSize" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/Pale_Turquoise" />

                <EditText
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/baseline_email_24"
                    tools:ignore="LabelFor,VisualLintTextFieldSize" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/Pale_Turquoise" />
                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="20px"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>