<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Menu -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitle"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kategori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/kategori"
                android:textColor="@color/primaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            <LinearLayout
                android:id="@+id/info1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_circle_radius"
                android:backgroundTint="@color/primary"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/info"
                    android:src="@drawable/ic_info"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/sebagian_penyedia_jasa_pengiriman_berpotensi_tidak_bisa_untuk_sementara_waktu"
                    android:textColor="#263238"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/laundry_terdekat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/cuaca_hari_ini"
                android:textColor="@color/primaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />


            <!-- Your item layout content here -->
            <androidx.cardview.widget.CardView
                android:id="@+id/weatherCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">
                <!-- Bagian kiri untuk teks -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/main"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:textSize="35sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/weatherDescriptionTextView"
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/cityNameTextView"
                        android:layout_width="121dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/weatherIconImageView"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="250dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/icon_cuaca" />

                <TextView
                    android:id="@+id/temperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/weatherIconImageView"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="250dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
            <!-- History Button -->
            <LinearLayout
                android:id="@+id/layoutHistory"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_circle_radius"
                android:backgroundTint="@color/primary"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/riwayat"
                    android:src="@drawable/ic_shop"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/azhar_periksa_riwayat_pesananmu"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
